update for testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="main">
+  <div class="content"><span></span> </div>
   <h1>My Wishlisted Books List</h1>
   
 
@@ -39,5 +40,3 @@
 
   <button class="btn-primary" (click)="addBook(newBook.value)">Add</button>
 </div>
-
-
